--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div id="container">
+  <div id="main-layout">
     <canvas id="game-canvas"></canvas>
     <div id="controls">
       <button id="start-pause">▶ Start / ⏸ Pause</button>
