--- a/index.html
+++ b/index.html
@@ -3,24 +3,22 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-  <title>Game of Life</title>
+  <title>ColorLife</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div id="main-layout">
-    <canvas id="game-canvas"></canvas>
-    <div id="controls">
+  <canvas id="game-canvas"></canvas>
+  <div id="ui-overlay">
+    <div id="top-controls">
       <button id="start-pause">▶ Start / ⏸ Pause</button>
       <button id="clear">🧹 Clear</button>
       <button id="reset">🔄 Reset</button>
-      <button id="zoom-in">➕ Zoom In</button>
-      <button id="zoom-out">➖ Zoom Out</button>
-    </div>
-    <div id="color-controls">
-      <label for="color-picker">🦠 Color: </label>
+      <button id="zoom-in">➕</button>
+      <button id="zoom-out">➖</button>
+      <label for="color-picker" class="color-label">🎨</label>
       <input type="color" id="color-picker" value="#ff00cc">
     </div>
-    <div id="sliders">
+    <div id="panel">
       <div>
         <label for="born-slider">Cells Born At:</label>
         <input type="range" id="born-slider" min="1" max="8" value="3">
