--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
         <input type="range" id="survive-slider" min="1" max="8" value="2">
         <span id="survive-value">2</span>
       </div>
+      <div>
+        <label for="speed-slider">Simulation Speed:</label>
+        <input type="range" id="speed-slider" min="1" max="60" value="30">
+        <span id="speed-value">30</span> fps
+      </div>
+      <!-- Add more variables here as needed -->
     </div>
   </div>
   <script type="module" src="src/main.js"></script>
