--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
     <div id="panel">
       <div>
         <label for="born-slider">Cells Born At:</label>
-        <input type="range" id="born-slider" min="1" max="100" value="3">
+        <input type="range" id="born-slider" min="1" max="10" value="3">
         <span id="born-value">3</span>
       </div>
       <div>
         <label for="survive-slider">Survival Count:</label>
-        <input type="range" id="survive-slider" min="1" max="100" value="2">
+        <input type="range" id="survive-slider" min="1" max="10" value="2">
         <span id="survive-value">2</span>
       </div>
       <div>
@@ -34,6 +34,7 @@
         <input type="range" id="speed-slider" min="1" max="60" value="30">
         <span id="speed-value">30</span> fps
       </div>
+      <!-- Add more variables here as needed -->
     </div>
   </div>
   <script type="module" src="src/main.js"></script>
