index.html: New sliders, dropdowns, pattern buttons, new control order. style.css: Responsive bottom bar, pattern and variable UI styling. src/main.js: Handles all sliders, dropdowns, patterns, B/S checkboxes, and passes settings to game. src/game.js: Supports ghost fade speed, color modes, neighbor logic, B/S rules, vibrance. src/patterns.js: Contains classic patterns and insert logic.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-  <title>ColorLife</title>
+  <title>ColorLife Advanced</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -11,17 +11,56 @@
   <div id="ui-overlay">
     <div id="bottom-controls">
       <div id="panel">
+        <!-- 1. Cell Size / Grid Zoom -->
         <div>
-          <label for="born-slider">Cells Born At:</label>
-          <input type="range" id="born-slider" min="1" max="10" value="2">
-          <span id="born-value">2</span>
+          <label for="cellsize-slider">Cell Size:</label>
+          <input type="range" id="cellsize-slider" min="5" max="40" value="13">
+          <span id="cellsize-value">13</span>
         </div>
+        <!-- 2. Ghost Fade Speed -->
         <div>
-          <label for="survive-slider">Survival Count:</label>
-          <input type="range" id="survive-slider" min="1" max="10" value="2">
-          <span id="survive-value">2</span>
+          <label for="ghostfade-slider">Ghost Fade:</label>
+          <input type="range" id="ghostfade-slider" min="0" max="100" value="18">
+          <span id="ghostfade-value">0.18</span>
+        </div>
+        <!-- 4. Color Mode -->
+        <div>
+          <label for="colormode-select">Color Mode:</label>
+          <select id="colormode-select">
+            <option value="picked">Picked</option>
+            <option value="random">Random</option>
+            <option value="hue">Hue Cycle</option>
+            <option value="blend">Blend Neighbors</option>
+          </select>
+        </div>
+        <!-- 5. Neighbor Type -->
+        <div>
+          <label for="neighbortype-select">Neighbors:</label>
+          <select id="neighbortype-select">
+            <option value="moore">8 (Moore)</option>
+            <option value="vonneumann">4 (von Neumann)</option>
+            <option value="extended">24 (Extended)</option>
+          </select>
+        </div>
+        <!-- 6. Multiple Survival/Birth Counts -->
+        <div>
+          <label>B/S Rules:</label>
+          <span id="bs-birth"></span>
+          <span id="bs-survive"></span>
+        </div>
+        <!-- 13. Color Vibrance -->
+        <div>
+          <label for="vibrance-slider">Vibrance:</label>
+          <input type="range" id="vibrance-slider" min="0" max="200" value="100">
+          <span id="vibrance-value">100</span>%
         </div>
       </div>
+      <!-- 11. Pattern Library -->
+      <div id="patterns-panel">
+        <label>Patterns:</label>
+        <div id="patterns-buttons"></div>
+      </div>
+      <!-- Classic controls -->
       <button id="start-pause">▶ Start / ⏸ Pause</button>
       <button id="clear">🧹 Clear</button>
       <button id="reset">🔄 Reset</button>
@@ -30,7 +69,7 @@
       <label for="color-picker" class="color-label">🎨</label>
       <input type="color" id="color-picker" value="#ff00cc">
       <div id="speed-controls">
-        <label for="speed-slider">Simulation Speed:</label>
+        <label for="speed-slider">Speed:</label>
         <input type="range" id="speed-slider" min="1" max="60" value="5">
         <span id="speed-value">5</span> fps
       </div>
