Add optional grid overlay

--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
           <input type="range" id="vibrance-slider" min="0" max="200" value="100">
           <span id="vibrance-value">100</span>%
         </div>
+        <div>
+          <label for="showgrid-checkbox">Grid:</label>
+          <input type="checkbox" id="showgrid-checkbox">
+        </div>
       </div>
       <div id="patterns-panel">
         <label>Patterns:</label>
