Add frame counter display

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
         <label for="speed-slider">Speed:</label>
         <input type="range" id="speed-slider" min="1" max="60" value="5">
         <span id="speed-value">5</span> fps
+        <span>Frame: <span id="frame-value">0</span></span>
       </div>
     </div>
   </div>
