Add time direction toggle

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         <button id="open-patterns-menu" class="pattern-menu-btn">Choose Pattern</button>
       </div>
       <button id="start-pause">&#x25B6; Start / &#x23F8; Pause</button>
+      <button id="toggle-direction">&#8646; Forward</button>
       <button id="clear">&#129689; Clear</button>
       <button id="reset">&#128260; Reset</button>
       <button id="zoom-in">&#10133;</button>
