--- a/index.html
+++ b/index.html
@@ -53,7 +53,11 @@
         <button id="open-patterns-menu" class="pattern-menu-btn">Choose Pattern</button>
       </div>
       <button id="start-pause">&#x25B6; Start / &#x23F8; Pause</button>
-      <button id="toggle-direction">&#8646; Forward</button>
+      <div id="direction-controls">
+        <label for="direction-slider">Direction:</label>
+        <input type="range" id="direction-slider" min="0" max="1" value="1" step="1">
+        <span id="direction-value">Forward</span>
+      </div>
       <button id="clear">&#129689; Clear</button>
       <button id="reset">&#128260; Reset</button>
       <button id="zoom-in">&#10133;</button>
