Default to grid layout and B3/S23

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
         <div>
           <label for="showgrid-checkbox">Grid:</label>
-          <input type="checkbox" id="showgrid-checkbox">
+          <input type="checkbox" id="showgrid-checkbox" checked>
         </div>
       </div>
       <div id="patterns-panel">
