--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
         <input type="range" id="speed-slider" min="1" max="60" value="5">
         <span id="speed-value">5</span> fps
         <span>Frame: <span id="frame-value">0</span></span>
+        <input type="range" id="frame-slider" min="0" max="0" value="0" step="1">
       </div>
     </div>
   </div>
