--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
           </select>
         </div>
         <div>
+          <label for="neighborradius-slider">Neighbor Radius:</label>
+          <input type="range" id="neighborradius-slider" min="1" max="5" value="1">
+          <span id="neighborradius-value">1</span>
+        </div>
+        <div>
           <label>B/S Rules:</label>
           <span id="bs-birth"></span>
           <span id="bs-survive"></span>
