Enhance pattern preview scaling

--- a/index.html
+++ b/index.html
@@ -80,6 +80,10 @@
       <button id="close-patterns-menu" class="close-btn">&times;</button>
       <h2>Select a Pattern</h2>
       <input id="pattern-search" type="text" placeholder="Search patterns..." autocomplete="off">
+      <div id="preview-size">
+        <label for="pattern-zoom">Preview Size:</label>
+        <input id="pattern-zoom" type="range" min="0.5" max="2" step="0.25" value="1">
+      </div>
       <div id="pattern-list"></div>
     </div>
   </div>
