Change reset button to randomize with 100x100 colorful area

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <span id="direction-value">Forward</span>
       </div>
       <button id="clear">&#129689; Clear</button>
-      <button id="reset">&#128260; Reset</button>
+      <button id="randomize">&#127922; Randomize</button>
       <button id="zoom-in">&#10133;</button>
       <button id="zoom-out">&#10134;</button>
       <label for="color-picker" class="color-label">&#127912;</label>
