Add mobile menu toggle

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
   <canvas id="game-canvas"></canvas>
   <div id="ui-overlay">
+    <button id="menu-toggle">&#9776;</button>
     <div id="bottom-controls">
       <div id="panel">
         <div>
