--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <canvas id="game-canvas"></canvas>
   <div id="ui-overlay">
-    <button id="menu-toggle">&#9776;</button>
+    <button id="menu-toggle" aria-expanded="false" aria-label="Toggle controls">&#9776;</button>
     <div id="bottom-controls">
       <div id="panel">
         <div>
